# Bitclap

./: .env.sample  .gitignore  Cargo.toml  readme.md  shell.nix
src/: main.rs
