[package]
name = "bitclap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
thiserror = { version = "1.0.0", default-features = false }
